# robot-core

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
.github/workflows/: ros2.yml  rust.yml
etc/: config.yaml  test.yaml
robot-core/: Cargo.toml
robot-core/src/: hardware.rs  main.rs
robot-core/src/hardware/: camera.rs  laser.rs  process.rs
src/: main.rs
tools/: build.sh  lib_update.sh  make_deb.sh
